# jiraone

./: CHANGES.md  CONTRIBUTING.md  SECURITY.md  pyproject.toml
.github/workflows/: python-package.yml  test-suite.yml
docs/: oauth2_setup.md
src/jiraone/: __init__.py  client.py  credentials.py  echo.py  endpoints.py  exceptions.py  fields.py  file_io.py  iterators.py  jira_logs.py  management.py  pagination.py  retry.py  streaming.py  users.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_client.py  test_credentials.py  test_exceptions.py  test_file_io.py  test_integration.py  test_pagination.py  test_retry.py  test_streaming.py  test_users.py  test_validation.py
