[project]
name = "jiraone"
version = "v0.9.3"
authors = [
    { name="Prince Nyeche", email="support@elfapp.website" },
]
description = "A REST API Implementation to Jira Cloud APIs for creating reports and for performing other Jira queries."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.9"
dependencies = [
    "requests",
]
[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/princenyeche/jiraone"
Source = "https://github.com/princenyeche/jiraone"
Documentation = "https://jiraone.readthedocs.io/"
"Tracker" = "https://github.com/princenyeche/jiraone/issues"


[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinxcontrib-httpdomain",
    "jiraone",
    "sphinx-autoapi",
    "scipy",
    "numpy",
    "pandas",
    "matplotlib",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "responses>=0.23",
    "mypy>=1.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[build-system]
requires = [
    "setuptools>=78",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/jiraone"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 15
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
]
